packages/core/src/parser/parser.ts
import {
    ArrayNode,
    AssignmentExpressionNode,
    ASTNode,
    BinaryOpNode,
    BlockNode,
    BooleanNode,
    CallExpressionNode,
    EnumNode,
    EnumVariantNode,
    EnumVariantValueNode,
    ExpressionStatementNode,
    FieldNode,
    FunctionDecNode,
    IdentifierNode,
    IfElseNode,
    ImportNode,
    MapNode,
    MemberExpressionNode,
    ModuleNode,
    NumberNode,
    ParameterNode,
    ParametersListNode,
    ProgramNode,
    PropertyNode,
    ReturnNode,
    ScopedIdentifierNode,
    SetNode,
    SourceElementsNode,
    StringNode,
    StructInitNode,
    StructFieldNode,
    StructNode,
    TupleNode,
    TupleVariantNode,
    TypeNode,
    TypeParameterNode,
    UseItemNode,
    UseListNode,
    UseNode,
    UsePathNode,
    VariableNode,
    VariableStatementNode,
    WhileNode,
    MemberDecNode,
    LambdaNode,
    AliasNode,
    ForNode,
    RangeNode,
    SpreadElementNode,
    MatchNode,
    MatchArmNode,
    WildcardNode,
    EnumPatternNode,
    IfLetNode,
    ImplNode,
    AttributeNode,
    MacroFunctionNode,
    MetaItemNode,
    MetaSeqItemNode,
    UnaryOpNode,
    TuplePatternNode,
    FieldPatternNode,
    StructPatternNode,
} from "./ast";

import { Token } from "../lexer/lexer";
import { TokenType } from "../lexer/token";
import { ErrorCodes, TError } from "../error/error";

interface Args {
    statement: boolean,
    no_init: boolean,
    constant: boolean,
    ignore_type: boolean,
    skip_struct_init: boolean,
    attributes: AttributeNode[]
}

export class Parser {
    private tokens: Token[] = [];
    private current: number = 0;
    private file_path: string;

    constructor(
        tokens: Token[],
        file_path: string
    ) {
        this.file_path = file_path;
        this.tokens = tokens.filter(token => token.type !== TokenType.Newline);
    }

    private peek(): Token {
        return this.tokens[this.current];
    }

    private previous(): Token {
        return this.tokens[this.current - 1];
    }

    private is_at_end(): boolean {
        return this.peek() == undefined ||
            this.peek().type === TokenType.EOF;
    }

    private advance(): Token {
        if (!this.is_at_end()) this.current++;
        return this.previous();
    }

    private backtrack(): Token {
        if (this.current > 0) this.current--;
        return this.peek();
    }

    private check(type: TokenType): boolean {
        if (this.is_at_end()) return false;
        return this.peek().type === type;
    }

    private match(...types: TokenType[]): boolean {
        for (const type of types) {
            if (this.check(type)) {
                this.advance();
                return true;
            }
        }
        return false;
    }

    private error(code: string, reason: string, hint?: string, context?: string, expected?: string[], example?: string): never {
        const token = this.peek();
        throw new TError({
            code,
            file: this.file_path,
            reason,
            line: token.line,
            column: token.column,
            lineStr: token.line_str,
            stage: 'parser',
            hint,
            context,
            expected,
            example
        });
    }

    /**
     * Program ::= (source_elements)? <EOF>
     */
    public parse(): ASTNode {
        let source = this.source_elements({} as Args);

        if (this.match(TokenType.EOF)) {
            this.error(
                ErrorCodes.parser.UNEXPECTED_END_OF_INPUT,
                "Expected 'EOF'"
            );
        }

        return new ProgramNode(this.peek(), source);
    }

    /*
        source_elements ::= (source_element)+
    */
    private source_elements(args: Args): ASTNode {
        const sources: ASTNode[] = [];

        while (!this.is_at_end()) {
            sources.push(this.source_element(args));
        }

        return new SourceElementsNode(this.peek(), sources);
    }

    /*
        source_element ::= statement
    */
    private source_element(args: Args): ASTNode {
        return this.statement({
            ...args,
            statement: true
        });
    }

    /**
     statement ::= variable_statement
        | import_statement
        | use_statement
        | empty_statement
        | iteration_statement
        | continue_statement
        | break_statement
        | return_statement
        | expression_statement
        | struct_statement
        | enum_statement
        | trait_statement
        | module_statement
     */
    private statement(args: Args): ASTNode {
        const iden = this.peek().type;

        switch (iden) {
            case TokenType.Hash: {
                const attrs = [];
                while (this.check(TokenType.Hash)) {
                    attrs.push(this.attribute(args));
                }
                return this.statement({
                    ...args,
                    attributes: attrs
                });
            }
            case TokenType.Fun:
                return this.function_declaration(args);
            case TokenType.While:
                return this.while_statement(args);
            case TokenType.For:
                return this.for_statement(args);
            case TokenType.Return:
                return this.return_statement(args);
            case TokenType.Break:
                return this.break_statement(args);
            case TokenType.Continue:
                return this.continue_statement(args);
            case TokenType.Struct:
                return this.struct_statement(args);
            case TokenType.Enum:
                return this.enum_statement(args);
            case TokenType.Module:
                return this.module_statement(args);
            case TokenType.Import:
                return this.import(args);
            case TokenType.Use:
                return this.use(args);
            case TokenType.Type:
                return this.alias(args);
            case TokenType.Impl:
                return this.impl(args);
            case TokenType.Const:
            case TokenType.Let:
                {
                    const node = this.variable_statement(args);
                    if (!this.match(TokenType.SemiColon)) {
                        this.error(
                            ErrorCodes.parser.MISSING_SEMICOLON, // Error code for syntax errors
                            "Expected ';' at the end of the statement.",
                            "Ensure that you are terminating your statements with a semicolon.",
                            `Found token: '${this.peek().value}' instead of a semicolon`,
                            ["';'"]
                        );
                    }

                    return node;
                }
        }

        return this.expression_statement(args);
    }

    private expect(type: TokenType, errorConfig: {
        error: string,
        message: string,
        hint: string,
        expected: string[],
        example: string
    }): void {
        if (!this.match(type)) {
            this.error(
                errorConfig.error,
                errorConfig.message,
                errorConfig.hint,
                `Found token: '${this.peek().value}' instead of ${errorConfig.expected[0]}`,
                errorConfig.expected,
                errorConfig.example
            );
        }
    }

    private parseDelimitedList<T>({
        parseItem,
        delimiter,
        closingToken,
        errorConfig
    }: {
        parseItem: () => T,
        delimiter: TokenType,
        closingToken: TokenType,
        errorConfig: {
            error: string,
            message: string,
            hint: string,
            expected: string[],
            example: string
        }
    }): T[] {
        const items: T[] = [];

        while (!this.match(closingToken)) {
            items.push(parseItem());
            if (!this.match(delimiter)) {
                break;
            }
        }

        // Check for closing token
        if (!this.match(closingToken)) {
            this.error(
                errorConfig.error,
                errorConfig.message,
                errorConfig.hint,
                `Found token: '${this.peek().value}' instead of ${errorConfig.expected[0]}`,
                errorConfig.expected,
                errorConfig.example
            );
        }

        return items;
    }

    private attribute(args: Args): AttributeNode {
        const token = this.peek();

        if (!this.match(TokenType.Hash)) {
            this.error(
                ErrorCodes.parser.SYNTAX_ERROR,
                "Expected '#' to start an attribute.",
                "Attributes must begin with the '#' symbol.",
                `Found token: '${this.peek().value}' instead of '#'`,
                ["'#'"],
                "#[attribute_name]"
            );
        }

        if (!this.match(TokenType.LeftBracket)) {
            this.error(
                ErrorCodes.parser.SYNTAX_ERROR,
                "Expected '[' after '#' in attribute.",
                "Attributes use square brackets like #[...].",
                `Found token: '${this.peek().value}' instead of '['`,
                ["'['"],
                "#[attribute_name]"
            );
        }

        const meta_item = this.parseMetaItem(args);

        if (!this.match(TokenType.RightBracket)) {
            this.error(
                ErrorCodes.parser.SYNTAX_ERROR,
                "Expected ']' to close the attribute.",
                "Attributes must end with a closing bracket.",
                `Found token: '${this.peek().value}' instead of ']'`,
                ["']'"],
                "#[attribute_name]"
            );
        }

        return new AttributeNode(token, meta_item);
    }

    private parseMetaItem(args: Args): MetaItemNode {
        const startToken = this.peek();
        const path = this.scoped_identifier(args);

        if (this.match(TokenType.Equals)) {
            const value = this.constants(args);
            return new MetaItemNode(startToken, path, value);
        }

        if (this.match(TokenType.LeftParen)) {
            const metaSeq = this.parseDelimitedList({
                parseItem: () => this.parseMetaSeqItem(args),
                delimiter: TokenType.Comma,
                closingToken: TokenType.RightParen,
                errorConfig: {
                    error: ErrorCodes.parser.SYNTAX_ERROR,
                    message: "Expected ')' to close meta item arguments.",
                    hint: "Meta item argument lists must be enclosed in parentheses.",
                    expected: ["')'"],
                    example: "key(item1, item2)"
                }
            });
            return new MetaItemNode(startToken, path, undefined, metaSeq);
        }

        return new MetaItemNode(startToken, path);
    }

    private parseMetaSeqItem(args: Args): MetaSeqItemNode {
        const token = this.peek();

        if (this.isLiteralToken(this.peek().type)) {
            const literal = this.constants(args);
            return new MetaSeqItemNode(token, undefined, literal);
        }

        const metaItem = this.parseMetaItem(args);
        return new MetaSeqItemNode(token, metaItem);
    }

    private isLiteralToken(tokenType: TokenType): boolean {
        return [
            TokenType.String,
            TokenType.True,
            TokenType.False,
            TokenType.Number,
        ].includes(tokenType);
    }

    // function_declaration ::= "fun" identifier (type_parameters)? "(" (parameter_list)? ")" type_annotation function_body
    private function_declaration(args: Args): FunctionDecNode {
        // Expect function keyword ('fun')
        if (!this.match(TokenType.Fun)) {
            this.error(
                ErrorCodes.parser.SYNTAX_ERROR,
                "Expected 'fun' keyword to define a function.",
                "Ensure you're starting the function declaration with the 'fun' keyword.",
                `Found token: '${this.peek().value}' instead of 'fun'.`,
                ["'fun'"],
                "'fun my_function() { ... }'"
            );
        }

        const fun_token = this.peek();

        const functionName = this.identifier(args);
        let tp: TypeParameterNode[] | undefined = undefined;

        // Check for type parameters (generic functions)
        if (this.match(TokenType.LT)) {
            tp = this.type_parameters(args);

            // Expect closing '>'
            if (!this.match(TokenType.GT)) {
                this.error(
                    ErrorCodes.parser.MISSING_GREATER_THAN,
                    "Expected '>' after type parameters.",
                    "Ensure that you close your type parameters with a closing '>' token.",
                    `Found token: '${this.peek().value}' instead of '>'`,
                    [">"],
                    "'fun my_function<T>(param T) { ... }'"
                );
            }
        }

        // Expect opening parenthesis after function name
        if (!this.match(TokenType.LeftParen)) {
            this.error(
                ErrorCodes.parser.MISSING_LEFT_PAREN,
                "Expected '(' after function name.",
                "Ensure the function declaration is followed by '(' to start the parameter list.",
                `Found token: '${this.peek().value}' instead of '('`,
                ["'('"],
                "'fun my_function(param1: num, param2: string) { ... }'"
            );
        }

        // Parse the function parameters
        let parameters = this.parameters_list(args);

        // Expect closing parenthesis after parameters
        if (!this.match(TokenType.RightParen)) {
            this.error(
                ErrorCodes.parser.MISSING_RIGHT_PAREN,
                "Expected ')' after parameters.",
                "Ensure the function declaration is followed by ')' to close the parameter list.",
                `Found token: '${this.peek().value}' instead of ')'`,
                [")"],
                "'fun my_function(param1: num, param2: string) { ... }'"
            );
        }

        let rt: ASTNode;

        // Check if return type is specified
        if (this.match(TokenType.Colon)) {
            rt = this.type(args);
        } else {
            this.error(
                ErrorCodes.parser.MISSING_RETURN_TYPE,
                `Function '${functionName.name}' requires a return type annotation.`,
                "Ensure the function is followed by a return type after a colon ':' if needed.",
                `Found token: '${this.peek().value}' instead of a return type.`,
                [":"],
                "'fun my_function(): num { ... }'"
            );
        }

        // Expect function body (block)
        let body = this.block(args);
        body.name = `fn_body_${functionName.name}`;

        return new FunctionDecNode(
            fun_token,
            functionName,
            parameters,
            body,
            false,
            false,
            false,
            tp,
            rt,
            args.attributes
        );
    }

    private lambda_function(args: Args): LambdaNode {
        const fun_token = this.peek();
        // Expect function keyword ('fun') for lambda function
        if (!this.match(TokenType.Fun)) {
            this.error(
                ErrorCodes.parser.SYNTAX_ERROR,
                "Expected 'fun' keyword to define a lambda function.",
                "Ensure you're starting the lambda function declaration with the 'fun' keyword.",
                `Found token: '${this.peek().value}' instead of 'fun'.`,
                ["'fun'"],
                "'fun (x: num, y: num) -> x + y'"
            );
        }

        let tp: TypeParameterNode[] | undefined = undefined;

        // Check for type parameters (generic lambdas)
        if (this.match(TokenType.LT)) {
            tp = this.type_parameters(args);

            // Expect closing '>'
            if (!this.match(TokenType.GT)) {
                this.error(
                    ErrorCodes.parser.MISSING_GREATER_THAN,
                    "Expected '>' after type parameters.",
                    "Ensure that you close your type parameters with a closing '>' token.",
                    `Found token: '${this.peek().value}' instead of '>'`,
                    [">"],
                    "'fun <T>(x: T) -> x'"
                );
            }
        }

        // Expect opening parenthesis for lambda function parameters
        if (!this.match(TokenType.LeftParen)) {
            this.error(
                ErrorCodes.parser.MISSING_LEFT_PAREN,
                "Expected '(' after function name.",
                "Ensure the lambda function is followed by '(' to start the parameter list.",
                `Found token: '${this.peek().value}' instead of '('`,
                ["'('"],
                "'fun (x: num, y: num) -> x + y'"
            );
        }

        // Parse the lambda function parameters
        let parameters = this.parameters_list({
            ...args,
            ignore_type: true
        });

        // Expect closing parenthesis after parameters
        if (!this.match(TokenType.RightParen)) {
            this.error(
                ErrorCodes.parser.MISSING_RIGHT_PAREN,
                "Expected ')' after parameters.",
                "Ensure the lambda function declaration is followed by ')' to close the parameter list.",
                `Found token: '${this.peek().value}' instead of ')'`,
                [")"],
                "'fun (x: num, y: num) -> x + y'"
            );
        }

        let rt: ASTNode | undefined = undefined;

        // Check if return type is specified
        if (this.match(TokenType.Colon)) {
            rt = this.type(args);
        }

        let body;

        // Expect the arrow (->) for the lambda body
        if (this.match(TokenType.Arrow)) {
            // Check if body is a block or an expression
            if (this.check(TokenType.LeftBrace)) {
                body = this.block(args);
            } else {
                body = this.expression(args);
            }
        } else {
            this.error(
                ErrorCodes.parser.MISSING_ARROW,
                "Expected token '->' for lambda functions.",
                "Ensure you're using the '->' arrow token to separate parameters from the body in a lambda function.",
                `Found token: '${this.peek().value}' instead of '->'`,
                ["'->'"],
                "'fun (x: num, y: num) -> x + y'"
            );
        }

        // Return a new LambdaNode with the parsed parameters, body, and optional type parameters and return type
        return new LambdaNode(
            fun_token,
            parameters,
            body,
            false,
            tp,
            rt
        );
    }

    private parameters_list(args: Args): ParametersListNode | undefined {
        // If the next token is a right parenthesis, this means no parameters are provided.
        if (this.peek().type === TokenType.RightParen) {
            return undefined;
        }

        let seen_variadic = false;
        const parameters = [];

        // Loop through the parameters list and check for variadic
        do {
            // Check if variadic parameter is already seen. If so, throw an error.
            if (seen_variadic) {
                this.error(
                    ErrorCodes.parser.VARIADIC_PARAMETER_ERROR,
                    "Variadic parameter should be the last parameter in a function.",
                    "Variadic parameters are denoted by '...' and must always be the last parameter in the function.",
                    `Found token: '${this.peek().value}' after variadic parameter.`,
                    ["'...'"],
                    "'fun sum(a: num, b: num, ...rest: (number)) { ... }'"
                );
            }

            // Parse the current parameter
            const n = this.parameter(args);

            // Check if the current parameter is variadic
            if (n.variadic) {
                seen_variadic = true;
            }

            parameters.push(n);
        } while (this.match(TokenType.Comma)); // Continue parsing if we encounter a comma

        // Return the parameters as a list node
        return new ParametersListNode(this.peek(), parameters);
    }

    private parameter(args: Args): ParameterNode {
        let variadic = false;

        // Check for ellipsis token (variadic parameter)
        if (this.match(TokenType.Ellipsis)) {
            variadic = true;
        }

        // Parse the identifier (parameter name)
        const identifier = this.identifier(args);
        let data_type = null;

        const has_colon = this.match(TokenType.Colon);

        if (!has_colon && !args.ignore_type) {
            this.error(
                ErrorCodes.parser.MISSING_TYPE_ANNOTATION,
                `Parameter '${identifier.name}' requires type annotation.`,
                `A type annotation is required after the parameter name, indicating its type.`,
                `Found token: '${this.peek().value}' instead of a colon ':'`,
                [":"],
                "'param: num'"
            );
        }

        if (has_colon || !args.ignore_type) {
            data_type = this.type(args);
        }

        return new ParameterNode(
            this.peek(),
            identifier,
            variadic,
            data_type
        );
    }

    private for_statement(args: Args): ForNode {
        const token = this.peek();
        // Check for the 'for' keyword
        if (!this.match(TokenType.For)) {
            this.error(
                ErrorCodes.parser.MISSING_FOR_KEYWORD,
                "Expected keyword 'for' to start a for loop.",
                "Ensure you're starting the loop with the 'for' keyword.",
                `Found token: '${this.peek().value}' instead of 'for'.`,
                ["'for'"],
                "'for (let var in 1..5) { ... }'"
            );
        }

        if (this.match(TokenType.LeftParen)) { }

        const variable = this.identifier(args);

        if (!this.match(TokenType.In)) {
            this.error(
                ErrorCodes.parser.MISSING_LEFT_PAREN,
                "Expected 'in' after the variable in the for loop."
            );
        }

        const expression = this.expression({
            ...args,
            skip_struct_init: true
        });

        if (this.match(TokenType.RightParen)) { }

        // Parse the body of the while loop
        const body = this.block(args);

        // If the body is a block, name it "While"
        if (body instanceof BlockNode) {
            body.name = "While";
        }

        return new ForNode(token, variable, expression, body);
    }

    // "while" "(" expression ")" statement
    private while_statement(args: Args): WhileNode {
        const token = this.peek();
        // Check for the 'while' keyword
        if (!this.match(TokenType.While)) {
            this.error(
                ErrorCodes.parser.MISSING_WHILE_KEYWORD,
                "Expected keyword 'while' to start a while loop.",
                "Ensure you're starting the loop with the 'while' keyword.",
                `Found token: '${this.peek().value}' instead of 'while'.`,
                ["'while'"],
                "'while (condition) { ... }'"
            );
        }

        // Expect opening parenthesis
        if (this.match(TokenType.LeftParen)) { }

        // Parse the loop expression
        let expression = this.expression({
            ...args,
            skip_struct_init: true
        });

        // Expect closing parenthesis
        if (this.match(TokenType.RightParen)) { }

        // Parse the body of the while loop
        const body = this.block(args);

        // If the body is a block, name it "While"
        if (body instanceof BlockNode) {
            body.name = "While";
        }

        // Return the constructed WhileNode
        return new WhileNode(token, expression, body);
    }

    /*  
        block ::= { statement_list }
        statement_list ::= statement+
    */
    private block(args: Args): BlockNode {
        const body: ASTNode[] = [];

        // Expect opening brace
        if (!this.match(TokenType.LeftBrace)) {
            this.error(
                ErrorCodes.parser.MISSING_LEFT_BRACE,
                "Expected '{' to start the block body.",
                "Ensure the block is enclosed within curly braces '{ }'.",
                `Found token: '${this.peek().value}' instead of '{'`,
                ["'{'"],
                "'{ statement1; statement2; }'"
            );
        }

        // Parse statements inside the block
        while (!this.check(TokenType.RightBrace) && !this.is_at_end()) {
            body.push(this.statement(args));
        }

        let must_semi: ASTNode[] = [], errors = [];

        for (let i = 0; i < body.length - 1; i++) {
            if (!(
                body[i] instanceof IfElseNode ||
                body[i] instanceof IfLetNode ||
                body[i] instanceof ExpressionStatementNode ||
                body[i] instanceof VariableStatementNode
            )) {
                must_semi.push(body[i]);
            }
        }

        if (must_semi.length > 1) {
            for (let s of must_semi) {
                const token = Object.assign({
                    line: 1,
                    column: 1,
                    lineStr: ""
                }, s.token);

                const err = new TError({
                    code: ErrorCodes.parser.MISSING_SEMICOLON,
                    reason: "Expected ';' in expression.",
                    line: token.line,
                    column: token.column,
                    lineStr: token.line_str,
                    stage: "parser",
                })

                errors.push(err.message)
            }
        }

        if (errors.length > 1)
            throw new Error(errors.join("\n\n"));

        // Expect closing brace
        if (!this.match(TokenType.RightBrace)) {
            this.error(
                ErrorCodes.parser.MISSING_RIGHT_BRACE,
                "Expected '}' to close the block body.",
                "Ensure the block ends with a closing curly brace '}'.",
                `Found token: '${this.peek().value}' instead of '}'`,
                ["'}'"],
                "'{ statement1; statement2; }'"
            );
        }

        return new BlockNode(this.peek(), body);
    }

    private return_statement(args: Args): ReturnNode {
        // Expect the 'return' keyword
        if (!this.match(TokenType.Return)) {
            this.error(
                ErrorCodes.parser.MISSING_RETURN_KEYWORD,
                "Expected 'return' keyword to start the return statement.",
                "Ensure that the return statement begins with the 'return' keyword.",
                `Found token: '${this.peek().value}' instead of 'return'.`,
                ["'return'"],
                "'return value;'"
            );
        }

        // Check for an empty return statement (just a return with no value)
        if (this.match(TokenType.SemiColon)) {
            return new ReturnNode(this.peek());
        }

        // Parse the expression after 'return'
        const expression = this.expression(args);

        // Expect semicolon after return statement
        if (!this.match(TokenType.SemiColon)) {
            // WILL BITE BACK
            if (args.statement)
                this.error(
                    ErrorCodes.parser.MISSING_SEMICOLON,
                    "Expected ';' after return statement.",
                    "Ensure the return statement ends with a semicolon.",
                    `Found token: '${this.peek().value}' instead of ';'.`,
                    ["';'"],
                    "'return value;'"
                );
        }

        return new ReturnNode(this.peek(), expression);
    }

    private break_statement(args: Args): ASTNode {
        const token = this.peek();
        if (!this.match(TokenType.Break)) {
            this.error(
                ErrorCodes.parser.MISSING_BREAK_KEYWORD,
                "Expected 'break' keyword.",
                "Use 'break' to exit from a loop or switch statement.",
                `Found token: '${this.peek().value}' instead of 'break'.`,
                ["'break'"],
                "'break;'"
            );
        }

        if (!this.match(TokenType.SemiColon)) {
            this.error(
                ErrorCodes.parser.MISSING_SEMICOLON,
                "Expected ';' after 'break'.",
                "Statements must end with a semicolon.",
                `Found token: '${this.peek().value}' instead of ';'.`,
                ["';'"],
                "'break;'"
            );
        }

        return {
            hot: new Map(),
            type: "Break",
            token,
            accept(visitor, argz) {
                return visitor.visitBreak?.(this, argz);
            }
        };
    }

    private continue_statement(args: Args): ASTNode {
        const token = this.peek();
        if (!this.match(TokenType.Continue)) {
            this.error(
                ErrorCodes.parser.MISSING_CONTINUE_KEYWORD,
                "Expected 'continue' keyword.",
                "Use 'continue' to skip the rest of the current loop iteration.",
                `Found token: '${this.peek().value}' instead of 'continue'.`,
                ["'continue'"],
                "'continue;'"
            );
        }

        if (!this.match(TokenType.SemiColon)) {
            this.error(
                ErrorCodes.parser.MISSING_SEMICOLON,
                "Expected ';' after 'continue'.",
                "Statements must end with a semicolon.",
                `Found token: '${this.peek().value}' instead of ';'.`,
                ["';'"],
                "'continue;'"
            );
        }

        return {
            type: "Continue",
            hot: new Map(),
            token,
            accept(visitor, argz) {
                return visitor.visitContinue?.(this, argz);
            }
        };
    }

    // "if" "(" expression ")" statement ("else" statement)?
    private if_expression(args: Args): IfElseNode | IfLetNode {
        const token = this.peek();

        if (!this.match(TokenType.If)) {
            this.error(
                ErrorCodes.parser.MISSING_IF_KEYWORD,
                "Expected 'if' keyword to start a conditional statement.",
                "The 'if' statement must start with the keyword 'if'.",
                `Found token: '${this.peek().value}' instead of 'if'.`,
                ["'if'"],
                "'if (condition) { ... }'"
            );
        }

        if (this.check(TokenType.Let)) {
            this.backtrack()
            return this.if_let_expression(args);
        }

        if (this.match(TokenType.LeftParen)) { }

        let condition = this.expression({
            ...args,
            skip_struct_init: true
        });

        if (this.match(TokenType.RightParen)) { }

        const consequent = this.block(args);

        if (this.match(TokenType.Else)) {
            const alternate = this.block(args);
            return new IfElseNode(token, condition, consequent, alternate);
        }

        return new IfElseNode(token, condition, consequent);
    }

    // variable_statement ::= "let" variable_declaration
    // | "const" variable_declaration
    private variable_statement(args: Args): VariableStatementNode {
        let constant = false;

        if (!this.match(TokenType.Let)) {
            if (this.match(TokenType.Const)) {
                constant = true;
            } else {
                this.error(
                    ErrorCodes.parser.MISSING_LET_OR_CONST,
                    "Expected 'let' or 'const' to declare a variable.",
                    "All variable declarations must begin with either 'let' (for mutable) or 'const' (for immutable).",
                    `Found token: '${this.peek().value}' instead.`,
                    ["'let'", "'const'"],
                    "- let x = 5;\n  - const PI = 3.14;"
                );
            }
        }

        return new VariableStatementNode(this.peek(), this.variable({
            ...args,
            constant
        }));
    }

    // variable_declaration ::= ("mut")? identifier (type_annotation)? (initialiser)?
    private variable(args: Args): VariableNode {
        let mutable = false;
        let expression = undefined;
